--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             </form>
         </div>
     </div>
-
-    <script type="module" src="script.js"></script>
-    <script type="module" src="sign.js"></script>
+<script src="script.js"></script>
+    <script type="module" src="firebase.js"></script>
+    <script type="module" src="auth.js"></script>
 </body>
 </html>
