--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="background-books">
@@ -35,6 +36,10 @@
                     <i class="fas fa-eye password-toggle" id="login-password-toggle"></i>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Sign In</button>
+                <button type="button" class="btn btn-google w-100" id="google-signin-btn">
+                    <img src="https://img.icons8.com/color/24/google-logo.png" alt="Google Logo">
+                    Sign in with Google
+                </button>
                 <p class="text-center mt-3">
                     <a href="#" class="nav-link" id="forgot-password">Forgot Password?</a>
                 </p>
@@ -70,6 +75,10 @@
                 </div>
                 <div class="password-strength" id="password-strength"></div>
                 <button type="submit" class="btn btn-primary w-100" >Create Account</button>
+                <button type="button" class="btn btn-google w-100" id="google-signup-btn">
+                    <img src="https://img.icons8.com/color/24/google-logo.png" alt="Google Logo">
+                    Sign up with Google
+                </button>
                 <p class="text-center mt-3">
                     <a href="#" class="nav-link" id="to-login">Already have an account? Sign In</a>
                 </p>
