--- a/dashboard.html
+++ b/dashboard.html
@@ -48,6 +48,10 @@
       background: #8b4513;
       border-radius: 5px;
     }
+    .nav-item.active {
+  background: #a0522d;
+  border-radius: 5px;
+}
 
     .content {
       margin-left: 250px;
@@ -152,16 +156,19 @@
   <div class="sidebar">
     <h4 class="text-center mb-4">Admin Panel</h4>
     <a href="#" class="nav-item"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-    <a href="#content" class="nav-item"><i class="fas fa-eye"></i> View Books</a>
-    <a href="#" class="nav-item"><i class="fas fa-plus"></i> Insert Books</a>
-    <a href="#" class="nav-item"><i class="fas fa-eye"></i> View Categories</a>
-    <a href="#" class="nav-item"><i class="fas fa-plus"></i> Insert Categories</a>
+    <a href="#insert" class="nav-item"  id="show-insert"><i class="fas fa-plus"></i> Insert Books</a>
+    <a href="#" class="nav-item"  id="show-view"><i class="fas fa-eye"></i> View Books</a>
+    
+    <!-- <a href="#" class="nav-item"><i class="fas fa-eye"></i> View Categories</a>
+    <a href="#" class="nav-item"><i class="fas fa-plus"></i> Insert Categories</a> -->
     <a href="#" class="nav-item"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
   </div>
 
   <!-- Main Content -->
   <div class="content" id="content">
-    <h2 class="form-title">Insert Book</h2>
+      <div id="insert-section" class="content-section">
+
+    <h2 class="form-title" >Insert Book</h2>
 
     <div id="alert-box"></div>
 
@@ -190,10 +197,14 @@
       <option value="Science Fiction">Science Fiction</option>
       <option value="Adventure Fiction">Adventure Fiction</option>
       <option value="Romance">Romance</option>
+      <option value="Romance">Fairy tale</option>
+
     </optgroup>
     <optgroup label="Non-Fiction">
       <option value="History">History</option>
       <option value="Poetry">Poetry</option>
+      <option value="Romance">Literary fiction</option>
+      <option value="Romance">Biography</option>
       <option value="Children's Literature">Children's Literature</option>
     </optgroup>
   </select>
@@ -214,10 +225,43 @@
       <button type="submit" class="btn btn-primary w-100">Submit</button>
     </form>
   </div>
+
+
+
+    <div id="view-section" class="content-section" style="display: none;">
+
+      <h2 class="form-title">View Books</h2>
+      <div id="books-table-alert"></div>
+      <div class="table-responsive">
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Author</th>
+              <th>Category</th>
+              <th>Price ($)</th>
+              <th>Stock</th>
+              <th>Description</th>
+              <th>Image</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="books-table-body">
+            <tr><td colspan="8" class="text-center">Loading books...</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+  </div>
   <!-- Toggle Sidebar Button (Mobile) -->
   <button class="toggle-btn d-md-none" id="toggleBtn"><i class="fas fa-bars"></i></button>
 
+<script>
+ 
 
+
+</script>
   <script type="module" src="dashScript.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
