sign-out-dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -202,9 +202,9 @@
   <div class="sidebar">
     <h4 class="text-center mb-4">Admin Panel</h4>
     <a href="#" class="nav-item"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-    <a href="#insert" class="nav-item"  id="show-insert"><i class="fas fa-plus"></i> Insert Books</a>
+    <a href="#" class="nav-item"  id="show-insert"><i class="fas fa-plus"></i> Insert Books</a>
     <a href="#" class="nav-item"  id="show-view"><i class="fas fa-eye"></i> View Books</a>
-    <a href="#" class="nav-item"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
+    <a href="#" class="nav-item" id="sign-out-btn"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
   </div>
 
   <!-- Main Content -->
