--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BookMe - home</title>
+    <link rel="icon" type="image/png" href="https://img.icons8.com/ios-filled/50/8b4513/book.png">
 
 
 
